--- a/Dockerfile.old
+++ b/Dockerfile.old
@@ -1,28 +1,35 @@
 # syntax=docker/dockerfile:experimental
 FROM quay.io/unstructured-io/base-images:rocky9.2-9@sha256:73d8492452f086144d4b92b7931aa04719f085c74d16cae81e8826ef873729c9 as base
 
-# Set up environment
-ENV USER root
-ENV HOME /root
+# NOTE(crag): NB_USER ARG for mybinder.org compat:
+#             https://mybinder.readthedocs.io/en/latest/tutorials/dockerfile.html
+ARG NB_USER=notebook-user
+ARG NB_UID=1000
+ARG PIP_VERSION
+ARG PIPELINE_PACKAGE
 
-RUN groupadd --gid 0 root
-RUN useradd --uid 0 --gid 0 root
+# Set up environment
+ENV USER ${NB_USER}
+ENV HOME /home/${NB_USER}
+
+RUN groupadd --gid ${NB_UID} ${NB_USER}
+RUN useradd --uid ${NB_UID} --gid ${NB_UID} ${NB_USER}
 WORKDIR ${HOME}
 
 ENV PYTHONPATH="${PYTHONPATH}:${HOME}"
-ENV PATH="/root/.local/bin:${PATH}"
+ENV PATH="/home/${NB_USER}/.local/bin:${PATH}"
 
 FROM base as python-deps
 # COPY requirements/dev.txt requirements-dev.txt
 COPY requirements/base.txt requirements-base.txt
 RUN python3.10 -m pip install pip==${PIP_VERSION} \
   && dnf -y groupinstall "Development Tools" \
-  && su -l root -c 'pip3.10 install  --no-cache  -r requirements-base.txt' \
+  && su -l ${NB_USER} -c 'pip3.10 install  --no-cache  -r requirements-base.txt' \
   && dnf -y groupremove "Development Tools" \
   && dnf clean all \
-  && ln -s /root/.local/bin/pip3.10 /usr/local/bin/pip3.10 || true
+  && ln -s /home/notebook-user/.local/bin/pip3.10 /usr/local/bin/pip3.10 || true
 
-USER root
+USER ${NB_USER}
 
 FROM python-deps as model-deps
 RUN python3.10 -c "import nltk; nltk.download('punkt')" && \
@@ -30,11 +37,11 @@ RUN python3.10 -c "import nltk; nltk.download('punkt')" && \
   python3.10 -c "from unstructured.partition.model_init import initialize; initialize()"
 
 FROM model-deps as code
-COPY --chown=root:root CHANGELOG.md CHANGELOG.md
-COPY --chown=root:root logger_config.yaml logger_config.yaml
-COPY --chown=root:root prepline_${PIPELINE_PACKAGE}/ prepline_${PIPELINE_PACKAGE}/
-COPY --chown=root:root exploration-notebooks exploration-notebooks
-COPY --chown=root:root scripts/app-start.sh scripts/app-start.sh
+COPY --chown=${NB_USER}:${NB_USER} CHANGELOG.md CHANGELOG.md
+COPY --chown=${NB_USER}:${NB_USER} logger_config.yaml logger_config.yaml
+COPY --chown=${NB_USER}:${NB_USER} prepline_${PIPELINE_PACKAGE}/ prepline_${PIPELINE_PACKAGE}/
+COPY --chown=${NB_USER}:${NB_USER} exploration-notebooks exploration-notebooks
+COPY --chown=${NB_USER}:${NB_USER} scripts/app-start.sh scripts/app-start.sh
 
 ENTRYPOINT ["scripts/app-start.sh"]
 # Expose a default port of 8000. Note: The EXPOSE instruction does not actually publish the port,
